# seo-pro

./: .env.check  .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  DEPLOYMENT.md  FEATURES.md  LICENSE  LOCAL_DEVELOPMENT.md  README.md  cloudbuild-gateway.yaml  cloudbuild-sdk-worker.yaml  cloudbuild.yaml  config.py  docker-compose.yml  install.ps1  install.sh  pyproject.toml  requirements.txt  uninstall.sh
.github/workflows/: ci.yml
api/: .eslintrc.json  .prettierrc.json  __init__.py  config.py  conftest.py  main.py  rate_limiter.py
api/core/: __init__.py  app.py  dependencies.py  middleware.py
api/models/: __init__.py  analyses.py  audits.py  common.py  credit_requests.py  credits.py
api/routes/: __init__.py  analyses.py  audit.py  audits.py  credit_requests.py  credits.py  health.py
api/routes/admin/: __init__.py  credits.py
api/scanner/: __init__.py  site.py
api/services/: __init__.py  analyses.py  audits.py  auth.py  cloud_tasks.py  credit_requests.py  credits.py  email.py  supabase.py
api/tests/: __init__.py  test_audits.py
api/utils/: __init__.py  url_validator.py
deploy/: Dockerfile.browser-worker  Dockerfile.gateway  Dockerfile.http-worker  Dockerfile.orchestrator  Dockerfile.sdk-worker
docs/: ARCHITECTURE.md  COMMANDS.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FEATURES.md  INSTALLATION.md  LOCAL_DEVELOPMENT.md  MCP-INTEGRATION.md  RATE-LIMITING.md  TODO.md  TROUBLESHOOTING.md
docs/plans/: 2025-03-01-auth-migration-design.md  2025-03-01-auth-migration-implementation.md  2026-03-01-web-search-implementation.md  2026-03-01-web-search-mcp-design.md
frontend/: .env.check  .env.example  .env.local.example  .env.vercel-check  .eslintrc.json  .gitignore  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/actions/: auth.ts  credits.ts
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/admin/credits/: actions.ts  credit-requests-table.tsx  page.tsx  status-filter.tsx
frontend/app/analyses/: page.tsx
frontend/app/analysis/[id]/: page.tsx
frontend/app/audit/[id]/: page.tsx
frontend/app/audits/: audits-table.tsx  page.tsx
frontend/app/auth/callback/: page.tsx  route.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/logout/: page.tsx
frontend/app/credits/: page.tsx
frontend/app/credits/history/: page.tsx
frontend/app/credits/requests/: page.tsx
frontend/app/dashboard/: dashboard-content.tsx  page.tsx
frontend/app/features/: page.tsx
frontend/app/pricing/: page.tsx
frontend/components/: error-boundary.tsx  providers.tsx
frontend/components/analysis/: analysis-selector.tsx
frontend/components/audit/: audit-form.tsx  index.ts
frontend/components/auth/: auth-button.tsx
frontend/components/credits/: credit-balance.tsx  index.ts  purchase-credits.tsx
frontend/components/layout/: header.tsx
frontend/components/marketing/: cta-section.tsx  features-grid.tsx  hero-section.tsx  index.ts  seo-logo.tsx
frontend/hooks/: use-auth.ts
frontend/lib/: api-client.ts  api.ts  auth.ts  auth.tsx  logger.ts  supabase.ts  utils.ts
frontend/lib/auth/: index.ts
orchestrator/: scheduler.py
scripts/: fetch_page.py
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql  002_analysis_tracking.sql  003_refund_credits_function.sql
web-search/: README.md
web-search/src/: browser.ts  search.ts  utils.ts
workers/: browser_worker.py  http_worker.py  sdk_worker.py
